<resources>
    <string name="app_name">CarrotMarket</string>

    <!-- Naming Rules -->
    <!-- 도메인명_컴포넌트함축어_용도(=목적) -->
    <string name="main_btm_nav_1_title">홈</string>
    <string name="main_btm_nav_2_title">동네생활</string>
    <string name="main_btm_nav_3_title">내 근처</string>
    <string name="main_btm_nav_4_title">채팅</string>
    <string name="main_btm_nav_5_title">나의 당근</string>

    <!-- login_start -->
    <string name="login_start_txt_main">우리 동네 중고 직거래</string>
    <string name="login_start_txt_sub">당근마켓은 동네 직거래 마켓이에요.\n 내 동네를 설정하고 시작해보세요!</string>
    <string name="login_start_btn_title">내 동네 설정하고 시작하기</string>


    <!-- login_location -->
    <string name="login_location_edit_hint">내 동네 이름(동,읍,면)으로 검색</string>
    <string name="login_location_btn_title">현재위치로 찾기</string>

    <!-- login_location_item -->
    <string name="login_location_item_main">근처동네</string>
    <string name="login_location_item_sub">서울 강동구 명일제1동</string>

    <!-- login_main -->
    <string name="login_main_top_txt">로그인</string>
    <string name="login_main_cert_txt">당근마켓은 휴대폰 번호로 가입해요. 번호는 안전하게 보관되며 어디에도 공개되지 않아요.</string>
    <string name="login_main_edt_id">아이디를 입력해주세요</string>
    <string name="login_main_edt_pwd">비밀번호를 입력해주세요</string>
    <string name="login_main_btn_login">로그인</string>

    <!-- sign_up_profile -->
    <string name="sign_up_top_txt">프로필 설정</string>
    <string name="sign_up_edt_nickname">닉네임을 입력해주세요</string>
    <string name="sign_up_txt_guide">프로필 사진과 닉네임을 입력해주세요</string>
    <string name="sign_up_btn_title">다음</string>

    <!--sign_up_main -->
    <string name="sign_up_main_top_txt">회원가입</string>
    <string name="sign_up_main_cert_txt">당근마켓은 휴대폰 번호로 가입해요. 번호는 안전하게 보관되며 어디에도 공개되지 않아요.</string>
    <string name="sign_up_main_edt_id">아이디를 입력해주세요</string>
    <string name="sign_up_main_edt_pwd">비밀번호를 입력해주세요</string>
    <string name="sign_up_main_btn_login">회원가입</string>

    <!-- home_fragment -->
    <string name="home_cv_main_txt">따뜻한 거래를 시작해보세요!</string>
    <string name="home_cv_sub_txt">지금 동네인증을 하고 천호제1동 근처 이웃 398,042명과 거래하세요.</string>
    <string name="home_cv_btn_title">동네인증하고 시작하기</string>
    <string name="home_top_txt">천호제1동</string>
    <string name="home_fab_title_1">동네홍보</string>
    <string name="home_fab_title_2">중고거래</string>

    <!-- home_item -->
    <string name="home_item_name">캉골 반팔티</string>
    <string name="home_item_location">천호제3동</string>
    <string name="home_item_time">1분 전</string>
    <string name="home_item_price">15,000원</string>
    <string name="home_item_location_and_time"> · </string>

</resources>