<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".src.StartActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_start_logo_gl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.13" />

    <ImageView
        android:layout_marginBottom="10dp"
        android:id="@+id/login_start_img_logo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:paddingHorizontal="105dp"
        android:src="@drawable/login_logo"
        app:layout_constraintBottom_toTopOf="@+id/login_start_img"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/login_start_logo_gl" />

    <ImageView
        android:id="@+id/login_start_img"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:paddingHorizontal="65dp"
        android:src="@drawable/login_image"
        app:layout_constraintBottom_toTopOf="@+id/login_start_txt_main"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_start_img_logo" />

    <TextView
        android:layout_marginTop="8dp"
        android:id="@+id/login_start_txt_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_start_txt_main"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/login_start_txt_sub"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_start_img" />

    <TextView
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:id="@+id/login_start_txt_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_start_txt_sub"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_start_txt_main" />


    <androidx.cardview.widget.CardView
        app:cardElevation="0dp"
        android:id="@+id/login_start_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        app:cardBackgroundColor="@color/mainColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:text="@string/login_start_btn_title"
            android:textColor="@color/white"
            android:textSize="17.3sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/login_start_btn"
            app:layout_constraintLeft_toLeftOf="@+id/login_start_btn"
            app:layout_constraintRight_toRightOf="@id/login_start_btn"
            app:layout_constraintTop_toTopOf="@+id/login_start_btn" />
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>