<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/home_vi_back"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fabClickViewColor"
        android:visibility="gone" />

    <TextView
        android:visibility="gone"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:id="@+id/home_txt_fab1_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_fab_title_1"
        app:layout_constraintRight_toLeftOf="@+id/home_fab_1"
        app:layout_constraintTop_toTopOf="@+id/home_fab_1"
        app:layout_constraintBottom_toBottomOf="@+id/home_fab_1"
        android:textSize="13.5sp"
        android:layout_marginRight="10dp"/>
    <TextView
        android:visibility="gone"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:id="@+id/home_txt_fab2_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_fab_title_2"
        app:layout_constraintRight_toLeftOf="@+id/home_fab_2"
        app:layout_constraintTop_toTopOf="@+id/home_fab_2"
        app:layout_constraintBottom_toBottomOf="@+id/home_fab_2"
        android:textSize="13.5sp"
        android:layout_marginRight="10dp"/>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/home_fab_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:backgroundTint="@color/mainColor"
        android:src="@drawable/mm_icon"
        android:visibility="invisible"
        app:borderWidth="0dp"
        app:fabSize="mini"
        app:rippleColor="@color/white"
        app:elevation="1dp"
        app:layout_constraintBottom_toTopOf="@+id/home_fab_2"
        app:layout_constraintEnd_toEndOf="@id/fabMain"
        app:layout_constraintStart_toStartOf="@id/fabMain"
        app:tint="@color/white" />



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/home_fab_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="9dp"
        app:rippleColor="@color/white"
        android:backgroundTint="@color/mainColor"
        android:src="@drawable/pencil_icon"
        android:visibility="invisible"
        app:borderWidth="0dp"
        app:elevation="1dp"
        app:fabSize="mini"
        app:layout_constraintBottom_toTopOf="@+id/fabMain"
        app:layout_constraintEnd_toEndOf="@id/fabMain"
        app:layout_constraintStart_toStartOf="@id/fabMain"
        app:tint="@color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:backgroundTint="@color/mainColor"
        android:src="@drawable/bottom_floating_btn_icon"
        app:borderWidth="0dp"
        app:elevation="1dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@color/white"
        app:tint="@color/white" />


    <View
        android:id="@+id/home_vi_top"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/login_main_top_vi_border"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/home_txt_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/home_top_txt"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/home_vi_top"
        app:layout_constraintLeft_toLeftOf="@+id/home_vi_top"
        app:layout_constraintTop_toTopOf="@id/home_vi_top" />

    <ImageView
        android:id="@+id/aa"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="3dp"
        android:src="@drawable/location_more_icon"
        app:layout_constraintBottom_toBottomOf="@+id/home_txt_location"
        app:layout_constraintLeft_toRightOf="@+id/home_txt_location"
        app:layout_constraintTop_toTopOf="@+id/home_txt_location" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:paddingVertical="17dp"
        app:layout_constraintBottom_toBottomOf="@+id/home_vi_top"
        app:layout_constraintRight_toRightOf="@+id/home_vi_top"
        app:layout_constraintTop_toTopOf="@+id/home_vi_top">


        <ImageView
            android:id="@+id/home_img_top_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:adjustViewBounds="true"
            android:src="@drawable/search_icon" />

        <ImageView
            android:id="@+id/home_img_top_menu"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:adjustViewBounds="true"
            android:src="@drawable/menu_icon" />

        <ImageView

            android:id="@+id/home_img_top_bell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/bell_icon" />

    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/home_srl"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_vi_top">

        <androidx.core.widget.NestedScrollView
            android:overScrollMode="never"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/home_cv_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="10dp"
                    android:visibility="visible"
                    app:cardBackgroundColor="@color/homeCardBack"
                    app:cardCornerRadius="3dp"
                    app:cardElevation="0dp"
                    app:layout_constraintBottom_toTopOf="@+id/home_rv"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingHorizontal="14dp"
                        android:paddingVertical="16dp"
                        android:weightSum="3">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:orientation="vertical"
                            android:paddingHorizontal="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="10dp"
                                android:text="@string/home_cv_main_txt"
                                android:textColor="@color/black"
                                android:textSize="13.5sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/home_cv_sub_txt"
                                android:textColor="@color/black"
                                android:textSize="12.5sp" />

                            <androidx.cardview.widget.CardView
                                android:id="@+id/home_btn_location_auth"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="13dp"
                                android:layout_weight="1"
                                app:cardBackgroundColor="@color/mainColor"
                                app:cardCornerRadius="3dp"
                                app:cardElevation="0dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:paddingHorizontal="10dp"
                                    android:paddingVertical="6.5dp"
                                    android:text="@string/home_cv_btn_title"
                                    android:textColor="@color/white"
                                    android:textSize="13sp"
                                    android:textStyle="bold" />

                            </androidx.cardview.widget.CardView>


                        </LinearLayout>

                        <ImageView
                            android:layout_width="110dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:adjustViewBounds="true"
                            android:paddingHorizontal="2dp"

                            android:src="@drawable/home_char" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>


                <androidx.recyclerview.widget.RecyclerView
                    android:overScrollMode="never"
                    android:id="@+id/home_rv"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/home_cv_info"
                    tools:listitem="@layout/home_item" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


</androidx.constraintlayout.widget.ConstraintLayout>